--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -33,12 +33,12 @@
 
     --danger-light: #F5A4A4;
     --danger-main: #F23A3A;
-    --danger-dark: #B81414;
+    --danger-dark: #ce1818;
     --danger-contrast-text: #ffffff;
 
     --success-light: #A6F5BE;
     --success-main: #34BA5C;
-    --success-dark: #167833;
+    --success-dark: #1a8a3c;
     --success-contrast-text: #ffffff;
 
     --sm-width: 480px;
